fixed margins and z-index of container

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -10,5 +10,7 @@ body {
 
 .content {
   flex: 1 0 auto;
+  z-index: -1;
+  margin: 50px 0;
 }
 
